edition = "2023";

package wayplatform.connect.ileap.v1;

option go_package = "github.com/way-platform/ileap-go/ileapv1pb";

import "google/protobuf/struct.proto";

// DataModelExtension is the PACT extension envelope for iLEAP extension data.
message DataModelExtension {
  string spec_version = 1 [json_name = "specVersion"];
  string data_schema = 2 [json_name = "dataSchema"];
  string documentation = 3;
  google.protobuf.Struct data = 4;
}
